# boost_opencv

./: README.md
testcascade/: .cproject  .project
testcascade/Debug/: makefile  objects.mk  testcascade
testcascade/Debug/src/: subdir.mk  testcascade.d
testcascade/src/: testcascade.cpp
traincascade/: .cproject  .project  CMakeLists.txt  HOGfeatures.cpp
traincascade/Debug/: HOGfeatures.d  bg.txt.old  boost.d  cascadeclassifier.d  features.d  haarfeatures.d  imagestorage.d  lbpfeatures.d  makefile  objects.mk  subdir.mk  traincascade  traincascade.d  trainingcars_48-48.vec
traincascade/Debug/classifier/: cascade.xml  params.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
traincascade/Debug/negative/: bg.txt
